tests/ui/issue-94866.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-94866.rs:10:11
   |
LL |     match Enum::A {
   |           ^^^^^^^ pattern `Enum::B` not covered
   |
note: `Enum` defined here
  --> $DIR/issue-94866.rs:7:6
   |
LL | enum Enum { A, B }
   |      ^^^^      - not covered
   = note: the matched value is of type `Enum`
help: ensure that all possible cases are being handled by adding an arm to handle the `Enum::B` case
   |
LL ~     Enum::A => m!(),
LL +     Enum::B => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
