tests/ui/issue-94866.rs
macro_rules! m {
    () => {
        {}
    };
}

enum Enum { A, B }

fn main() {
    match Enum::A {
    //~^ ERROR match is non-exhaustive
    Enum::A => m!()
    }
}
